--- a/src/Runner/Runner.csproj
+++ b/src/Runner/Runner.csproj
@@ -15,6 +15,11 @@
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <TrimmerSingleWarn>false</TrimmerSingleWarn>
         <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+        <PackageProjectUrl></PackageProjectUrl>
+        <RepositoryUrl></RepositoryUrl>
+        <IsPackable>true</IsPackable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>Innago.Demo.Auth0Samples</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
