--- a/src/Runner/Runner.csproj
+++ b/src/Runner/Runner.csproj
@@ -23,20 +23,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Auth0.AuthenticationApi" Version="7.36.0"/>
-        <PackageReference Include="Auth0.ManagementApi" Version="7.36.0"/>
-        <PackageReference Include="Auth0Net.DependencyInjection" Version="5.1.0"/>
-        <PackageReference Include="Bogus" Version="35.6.3"/>
-        <PackageReference Include="DotMake.CommandLine" Version="2.4.0"/>
-        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
-        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.5"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5"/>
-        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0"/>
-        <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.3.0"/>
+        <PackageReference Include="Auth0.AuthenticationApi" Version="7.40.0" />
+        <PackageReference Include="Auth0.ManagementApi" Version="7.40.0" />
+        <PackageReference Include="Auth0Net.DependencyInjection" Version="5.1.0" />
+        <PackageReference Include="Bogus" Version="35.6.3" />
+        <PackageReference Include="DotMake.CommandLine" Version="2.7.0" />
+        <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+        <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.3.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -46,12 +46,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Client\Auth0Client.Organizations.cs">
-        <DependentUpon>Auth0Client.cs</DependentUpon>
-      </Compile>
-      <Compile Update="Client\Auth0Client.Users.cs">
-        <DependentUpon>Auth0Client.cs</DependentUpon>
-      </Compile>
+      <Folder Include="Client\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+      <ProjectReference Include="..\Auth0Client\Auth0Client.csproj" />
     </ItemGroup>
 
 </Project>
