--- a/src/IdpServiceFacade/appsettings.Development.json
+++ b/src/IdpServiceFacade/appsettings.Development.json
@@ -21,7 +21,7 @@
           "labels": [
             {
               "key": "app",
-              "value": "EmailToPropertyOwner"
+              "value": "IDP Service Facade Service"
             }
           ],
           "propertiesAsLabels": [
@@ -36,9 +36,9 @@
     ]
   },
   "openTelemetry": {
-    "serviceName": "Ledgre EmailToPropertyOwner Service",
-    "otlpExporter": {
-      "endpointUri": "http://localhost:14318/v1/traces"
-    }
-  }
+    "endpoint": "http://localhost:4318/v1/traces"
+  },
+  "client_id": "use user secrets",
+  "client_secret": "use user secrets",
+  "domain": "use user secrets"
 }
