--- a/src/IdpServiceFacade/appsettings.json
+++ b/src/IdpServiceFacade/appsettings.json
@@ -1,14 +1,33 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
+      "Default": "Warning"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ]
   },
-  "AllowedHosts": "*",
+  "openTelemetry": {
+    "endpoint": "http://opentelemetry-collector.observability.svc:14318/v1/traces"
+  },
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
-  }
+  },
+  "client_id": "vault:/secret/data/auth0#clientId",
+  "client_secret": "vault:/secret/data/auth0#clientSecret",
+  "domain": "vault:/secret/data/auth0#domain"
 }
