--- a/src/Auth0Client/Auth0Client.csproj
+++ b/src/Auth0Client/Auth0Client.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Auth0.AuthenticationApi" Version="7.40.0" />
       <PackageReference Include="Auth0.ManagementApi" Version="7.40.0" />
       <PackageReference Include="Auth0Net.DependencyInjection" Version="5.1.0" />
+      <PackageReference Include="Innago.Shared.TryHelpers" Version="1.1.0" />
     </ItemGroup>
 
     <ItemGroup>
