minor change to trigger pipeline

--- a/src/IdpServiceFacade/appsettings.json
+++ b/src/IdpServiceFacade/appsettings.json
@@ -29,8 +29,8 @@
     }
   },
   "Auth0": {
-    "DatabaseName": "vault:/secret/data/auth0#databasename",
-    "ConnectionName": "vault:/secret/data/auth0#connectionname",
+    "DatabaseName": "vault:/secret/data/auth0#databaseName",
+    "ConnectionName": "vault:/secret/data/auth0#connectionName",
     "ClientId": "vault:/secret/data/auth0#clientId",
     "ClientSecret": "vault:/secret/data/auth0#clientSecret",
     "Domain": "vault:/secret/data/auth0#domain"
