Add imageName and argoCdRepoName to build-publish.yaml
This commit introduces two new configuration lines in the
`build-publish.yaml` file. The `imageName` is set to
`auth0samples`, and the `argoCdRepoName` is defined using
the GitHub repository owner combined with `/argocd-shared`.
These changes improve the deployment configuration.

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -21,4 +21,6 @@ jobs:
       id-token: write
       contents: write
       actions: read
-    
+    with:
+      imageName: auth0samples
+      argoCdRepoName: "${{ github.repository_owner }}/argocd-shared"
