--- a/src/IdpServiceFacade/appsettings.Development.json
+++ b/src/IdpServiceFacade/appsettings.Development.json
@@ -38,7 +38,11 @@
   "openTelemetry": {
     "endpoint": "http://localhost:4318/v1/traces"
   },
-  "client_id": "use user secrets",
-  "client_secret": "use user secrets",
-  "domain": "use user secrets"
+  "Auth0": {
+    "DatabaseName": "use user secrets",
+    "ConnectionName": "use user secrets",
+    "ClientId": "use user secrets",
+    "ClientSecret": "use user secrets",
+    "Domain": "use user secrets"
+  }
 }
