Replaces semicolon with comma in NoWarn property.

--- a/src/IdpServiceFacade/IdpServiceFacade.csproj
+++ b/src/IdpServiceFacade/IdpServiceFacade.csproj
@@ -26,7 +26,7 @@
     
     <PropertyGroup Condition=" '$(CI)' == 'true' ">
         <DisableDefaultDocumentation>true</DisableDefaultDocumentation>
-        <NoWarn>RS0041;RS0016</NoWarn>
+        <NoWarn>RS0041,RS0016</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
