--- a/src/Auth0Client/Auth0Client.csproj
+++ b/src/Auth0Client/Auth0Client.csproj
@@ -4,18 +4,54 @@
         <TargetFramework>net9.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
-        
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <DocumentationFile>bin\Debug\net9.0\Auth0Client.xml</DocumentationFile>
+        <DefaultDocumentationFolder>docs</DefaultDocumentationFolder>
+        <DefaultDocumentationFileNameFactory>DirectoryName</DefaultDocumentationFileNameFactory>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(CI)' == 'true' ">
+        <DisableDefaultDocumentation>true</DisableDefaultDocumentation>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Auth0.AuthenticationApi" Version="7.40.0" />
-      <PackageReference Include="Auth0.ManagementApi" Version="7.40.0" />
-      <PackageReference Include="Auth0Net.DependencyInjection" Version="5.1.0" />
-      <PackageReference Include="Innago.Shared.TryHelpers" Version="1.1.0" />
+        <PackageReference Include="Auth0.AuthenticationApi" Version="7.40.0"/>
+        <PackageReference Include="Auth0.ManagementApi" Version="7.40.0"/>
+        <PackageReference Include="Auth0Net.DependencyInjection" Version="5.1.0"/>
+        <PackageReference Include="DefaultDocumentation" Version="1.2.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Innago.Shared.TryHelpers" Version="1.1.0"/>
+        <PackageReference Include="microsoft.codeanalysis.bannedapianalyzers" Version="5.0.0-1.25277.114">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="5.0.0-1.25277.114">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="10.15.0.120848">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+        <ProjectReference Include="..\Abstractions\Abstractions.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <AdditionalFiles Include="PublicAPI.Shipped.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </AdditionalFiles>
+        <AdditionalFiles Include="PublicAPI.Unshipped.txt"/>
     </ItemGroup>
 
 </Project>
