Update project files for output directory settings
- Added `CopyToOutputDirectory` set to `Never` for `PublicAPI.Shipped.txt` in `IdpServiceFacade.csproj`.
- Minor formatting updates in `IdpServiceFacadeClient.csproj` for `Protobuf` entries and `JetBrains.Annotations` package reference.
- Modified `AdditionalFiles` section to include `CopyToOutputDirectory` for `PublicAPI.Shipped.txt` and ensured correct removal of `PublicAPI.Unshipped.txt`.
- Included `README.md` in the project with packing enabled.

--- a/src/IdpServiceFacade/IdpServiceFacade.csproj
+++ b/src/IdpServiceFacade/IdpServiceFacade.csproj
@@ -90,7 +90,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <AdditionalFiles Include="PublicAPI.Shipped.txt" />
+        <AdditionalFiles Include="PublicAPI.Shipped.txt">
+          <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+        </AdditionalFiles>
         <None Remove="PublicAPI.Unshipped.txt" />
         <AdditionalFiles Include="PublicAPI.Unshipped.txt" />
     </ItemGroup>
