--- a/src/Auth0Client/Auth0Client.csproj
+++ b/src/Auth0Client/Auth0Client.csproj
@@ -48,9 +48,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <AdditionalFiles Include="PublicAPI.Shipped.txt">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </AdditionalFiles>
+        <AdditionalFiles Include="PublicAPI.Shipped.txt" />
         <AdditionalFiles Include="PublicAPI.Unshipped.txt"/>
     </ItemGroup>
 
