Implement Auth0 health check endpoint

--- a/src/IdpServiceFacade/IdpServiceFacade.csproj
+++ b/src/IdpServiceFacade/IdpServiceFacade.csproj
@@ -16,6 +16,7 @@
         <UserSecretsId>e3466403-e761-48b5-9bdd-2bbb71059064</UserSecretsId>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <DockerfileContext>..\..</DockerfileContext>
+        <InterceptorsNamespaces>$(InterceptorsNamespaces);Microsoft.Extensions.Configuration.Binder.SourceGeneration</InterceptorsNamespaces>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
