Update Microsoft.Extensions packages to version 9.0.9
Updated the `Runner.csproj` file to change the version of
Microsoft.Extensions.Caching.Memory,
Microsoft.Extensions.Configuration.UserSecrets, and
Microsoft.Extensions.Hosting from 9.0.8 to 9.0.9. This ensures
the project uses the latest patch versions, which may include
important bug fixes and improvements.

--- a/src/Runner/Runner.csproj
+++ b/src/Runner/Runner.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -27,9 +27,9 @@
         <PackageReference Include="Auth0Net.DependencyInjection" Version="5.1.0" />
         <PackageReference Include="Bogus" Version="35.6.3" />
         <PackageReference Include="DotMake.CommandLine" Version="2.7.1" />
-        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.8" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.8" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
