Addind support for GetToken and GetRefresh token with Auth0 for OpenApi clients

--- a/src/IdpServiceFacade/appsettings.json
+++ b/src/IdpServiceFacade/appsettings.json
@@ -33,6 +33,7 @@
     "ConnectionName": "vault:/secret/data/auth0#connectionName",
     "ClientId": "vault:/secret/data/auth0#clientId",
     "ClientSecret": "vault:/secret/data/auth0#clientSecret",
-    "Domain": "vault:/secret/data/auth0#domain"
+    "Domain": "vault:/secret/data/auth0#domain",
+    "Audience": "vault:/secret/data/auth0#audience"
   }
 }
