Update authentication parameters for realm and connection
Replaced `this.auth0ConnectionName` with `this.auth0DatabaseName` for the `realm` and `connection` fields. This change reflects a transition from a connection-based approach to a database-based approach for user authentication.

--- a/src/Auth0Client/Auth0Client.csproj
+++ b/src/Auth0Client/Auth0Client.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
+        <UserSecretsId>bdc867a4-c1d6-44f2-8bbc-d7f43a247457</UserSecretsId>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
