--- a/src/IdpServiceFacade/IdpServiceFacade.csproj
+++ b/src/IdpServiceFacade/IdpServiceFacade.csproj
@@ -38,12 +38,20 @@
           <OutputDir>obj/Debug/net9.0/</OutputDir>
           <Generator>MSBuild:Compile</Generator>
         </Protobuf>
+        <Protobuf Include="Protos\role.proto">
+          <GrpcServices>Server</GrpcServices>
+          <Access>Public</Access>
+          <ProtoCompile>True</ProtoCompile>
+          <CompileOutputs>True</CompileOutputs>
+          <OutputDir>obj/Debug/net9.0/</OutputDir>
+          <Generator>MSBuild:Compile</Generator>
+        </Protobuf>
         <Protobuf Include="Protos\user.proto">
           <GrpcServices>Server</GrpcServices>
           <Access>Public</Access>
           <ProtoCompile>True</ProtoCompile>
           <CompileOutputs>True</CompileOutputs>
-          <OutputDir>obj\Debug/net9.0/</OutputDir>
+          <OutputDir>obj/Debug/net9.0/</OutputDir>
           <Generator>MSBuild:Compile</Generator>
         </Protobuf>
     </ItemGroup>
@@ -94,6 +102,8 @@
         <AdditionalFiles Include="PublicAPI.Shipped.txt" />
         <None Remove="PublicAPI.Unshipped.txt" />
         <AdditionalFiles Include="PublicAPI.Unshipped.txt" />
+        <None Remove="BannedSymbols.txt" />
+        <AdditionalFiles Include="BannedSymbols.txt" />
     </ItemGroup>
 
     <ItemGroup>
