Corrections for build pipeline

--- a/src/IdpServiceFacade/appsettings.Development.json
+++ b/src/IdpServiceFacade/appsettings.Development.json
@@ -39,11 +39,11 @@
     "endpoint": "http://localhost:4318/v1/traces"
   },
   "Auth0": {
-    "DatabaseName": "IdentityDev",
-    "ConnectionName": "IdentityDev",
-    "ClientId": "Eh1PUwznkIA1rGw0vSwRYS8fRhXcahoF",
-    "ClientSecret": "lSBEX-GtWfwd3Ms_aLKk7ThObBOtVFf1Z4-TiIfakWEZkiPNHkXW-3aRB11eRs4z",
-    "Domain": "dev-k8qb6c5gperzf44n.us.auth0.com",
-    "Audience": "https://dev-my.innago.com/"
+    "DatabaseName": "use user secrets",
+    "ConnectionName": "use user secrets",
+    "ClientId": "use user secrets",
+    "ClientSecret": "use user secrets",
+    "Domain": "use user secrets",
+    "Audience": "use user secrets"
   }
 }
