--- a/src/Abstractions/Abstractions.csproj
+++ b/src/Abstractions/Abstractions.csproj
@@ -6,12 +6,39 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\netstandard2.0\Abstractions.xml</DocumentationFile>
+        <DefaultDocumentationFolder>docs</DefaultDocumentationFolder>
+        <DefaultDocumentationFileNameFactory>DirectoryName</DefaultDocumentationFileNameFactory>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(CI)' == 'true' ">
+        <DisableDefaultDocumentation>true</DisableDefaultDocumentation>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="Auth0.ManagementApi" Version="7.40.0" />
+      <PackageReference Include="DefaultDocumentation" Version="1.2.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Innago.Shared.TryHelpers" Version="1.1.0" />
       <PackageReference Include="JetBrains.Annotations" Version="2025.2.2" />
+      <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="5.0.0-1.25277.114">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="MorseCode.ITask" Version="2.0.3" />
       <PackageReference Include="System.Text.Json" Version="9.0.9" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <AdditionalFiles Include="PublicAPI.Shipped.txt" />
+        <AdditionalFiles Include="PublicAPI.Unshipped.txt"/>
     </ItemGroup>
 
 </Project>
