feat(users-in-org): create and list orgs
Signed-off-by: chris-innago <chris@innago.com>

--- a/src/IdpServiceFacadeClient/IdpServiceFacadeClient.csproj
+++ b/src/IdpServiceFacadeClient/IdpServiceFacadeClient.csproj
@@ -15,6 +15,7 @@
         <PackageReadMeFile>README.md</PackageReadMeFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <OutputType>Library</OutputType>
+        <InterceptorsNamespaces>$(InterceptorsNamespaces);Microsoft.Extensions.Configuration.Binder.SourceGeneration</InterceptorsNamespaces>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
