fix(UserService): implement GetUsersMetadataByEmailFragment
also update proto references and include README in packaging

Signed-off-by: chris-innago <chris@innago.com>

--- a/src/Auth0Client/Auth0Client.csproj
+++ b/src/Auth0Client/Auth0Client.csproj
@@ -51,6 +51,7 @@
     <ItemGroup>
         <AdditionalFiles Include="PublicAPI.Shipped.txt" />
         <AdditionalFiles Include="PublicAPI.Unshipped.txt" />
+        <None Include="README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
