feat(IdpServiceFacade): enhance HTTP client handlers and update user email/phone metadata retrieval
- Replace `DangerousAcceptAnyServerCertificateHttpClientHandler` with `LoggingCertificateHttpClientHandler` for detailed logging in certificate validation.
- Add new metadata fields to `UpdateVerifiedUserEmailRequest`, `UpdateUserProfileRequest`, and `UpdateVerifiedPhoneNumberRequest`.
- Extend `Auth0Client` and `IUserService` to support metadata retrieval by email, phone, and name fragments.
- Update related public API references and documentation.

--- a/src/IdpServiceFacade/appsettings.Development.json
+++ b/src/IdpServiceFacade/appsettings.Development.json
@@ -5,7 +5,10 @@
       "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Override": {
+        "LoggingCertificateHttpClientHandler": "Warning"
+      }
     },
     "WriteTo": [
       {
