--- a/src/IdpServiceFacade/IdpServiceFacade.csproj
+++ b/src/IdpServiceFacade/IdpServiceFacade.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -43,6 +43,11 @@
           <ProtoCompile>True</ProtoCompile>
           <CompileOutputs>True</CompileOutputs>
           <OutputDir>obj/Debug/net9.0/</OutputDir>
+          <Generator>MSBuild:Compile</Generator>
+        </Protobuf>
+        <Protobuf Include="Protos\auth.proto" Access="Public" GrpcServices="Server" ProtoCompile="True">
+          <OutputDir>obj/Debug/net9.0/</OutputDir>
+          <CompileOutputs>True</CompileOutputs>
           <Generator>MSBuild:Compile</Generator>
         </Protobuf>
         <Protobuf Include="Protos\role.proto">
