Add gRPC support for auth tokens and enhance services
Added `auth.proto` to the project for gRPC client generation.
Introduced `GetTokenRequest` and `GetTokenResponse` classes,
including serialization, equality, and cloning methods.
Enhanced `AuthClient` with synchronous and asynchronous `GetToken`
methods, supporting metadata, deadlines, and cancellation tokens.

Updated `PublicAPI.Unshipped.txt` with new constants and overrides
for `GetHashCode`, `Equals`, and `ToString` methods.
Added static descriptors and parsers for reflection and parsing.

Improved existing classes like `ActivateUserRequest` and
`ChangePasswordWithIdentityIdRequest` with new methods and properties.
Expanded `OrganizationClient` with methods for creating organizations
and initiating legal holds, supporting both sync and async operations.

--- a/src/IdpServiceFacadeClient/IdpServiceFacadeClient.csproj
+++ b/src/IdpServiceFacadeClient/IdpServiceFacadeClient.csproj
@@ -38,6 +38,7 @@
     <ItemGroup>
         <Protobuf Include="..\IdpServiceFacade\Protos\organization.proto" Link="Protos\organization.proto" GrpcServices="Client" />
         <Protobuf Include="..\IdpServiceFacade\Protos\user.proto" Link="Protos\user.proto" GrpcServices="Client" />
+        <Protobuf Include="..\IdpServiceFacade\Protos\auth.proto" Link="Protos\auth.proto" GrpcServices="Client" />
     </ItemGroup>
 
     <ItemGroup>
